# PAB_Dfinity

./: Cargo.toml  Makefile  README.md  canister_ids.json  deploy.sh  dfx.json  dfx.json.copy  ic.did  package-lock.json  package.json  tsconfig.json  webpack.config.js
src/boards/board/: Cargo.toml
src/boards/board/src/: lib.rs
src/boards/board_canister/: Cargo.toml  board.did
src/boards/board_canister/src/: lib.rs
src/boards/board_canister/src/inter_call/: mod.rs  types.rs
src/boards/board_canister/src/record/: mod.rs
src/boards/consensus/: Cargo.toml
src/boards/consensus/src/: lib.rs
src/boards/event/: Cargo.toml
src/boards/event/src/: lib.rs
src/boards/market/: Cargo.toml
src/boards/market/src/: lib.rs
src/boards/room/: Cargo.toml
src/boards/room/src/: channel.rs  group.rs  lib.rs  message.rs  voice.rs
src/boards/scene/: Cargo.toml
src/boards/scene/src/: lib.rs
src/boards/scene/src/common_scene/: mod.rs
src/boards/visa/: Cargo.toml
src/boards/visa/src/: lib.rs
src/boards/wall/: Cargo.toml
src/boards/wall/src/: lib.rs
src/boards/workshop/: Cargo.toml
src/boards/workshop/src/: lib.rs  message.rs
src/boards/workshop/src/nft/: mod.rs
src/boards/workshop/src/oracle/: config.rs  end_point.rs  engine.rs  mapping_metadata.rs  mod.rs
src/boards/workshop/src/record/: mod.rs
src/digital_life/Ontology/: Cargo.toml
src/digital_life/Ontology/src/: lib.rs
src/digital_life/Ontology/src/gene/: mod.rs
src/digital_life/Ontology/src/profile/: mod.rs
src/digital_life/Ontology/src/view/: mod.rs
src/digital_life/anderson/: Cargo.toml  anderson.did
src/digital_life/anderson/src/: lib.rs
src/digital_life/anderson/src/inter_call/: mod.rs
src/digital_life/anderson/src/record/: mod.rs
src/digital_life/human/: Cargo.toml
src/digital_life/human/src/: lib.rs
src/digital_life/human/src/assets/: mod.rs
src/digital_life/human/src/record/: mod.rs
src/nais/assets_canister/: Cargo.toml  assets_canister.did
src/nais/nais_canister/: Cargo.toml  nais_canister.did
src/nais/nais_canister/src/: deploy.sh  lib.rs
src/nais/nais_canister/src/inter_call/: mod.rs  types.rs
src/nft/: Cargo.toml
src/nft/src/: lib.rs
src/oracle/: main.mo  types.mo
src/oracle/public/: index.js
src/pab_frontend_assets/assets/: index.html
src/pab_frontend_assets/src/: index.jsx
