[package]
name = "room"
version = "0.1.0"
authors = ["Bryan111 <pabsysop@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-cdk = "0.3.0"
ic-cdk-macros = "0.3.0"
uuid = { version = "0.8.2", features = ["serde", "v4", "wasm-bindgen"] }
consensus = { path = "../consensus" }
event = { path = "../event"}
scene = { path = "../scene"}
workshop = { path = "../workshop"}
visa = { path = "../visa" }
market = { path = "../market" }
