[package]
name = "room"
version = "0.1.0"
authors = ["Bryan111 <pabsysop@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-cdk = "0.3.0"
ic-cdk-macros = "0.3.0"
ic-types = "0.2.2"
candid = "0.7.6"
serde = "1.0.116"
consensus = { path = "../consensus" }
event = { path = "../event"}
scene = { path = "../scene"}
workshop = { path = "../workshop"}
visa = { path = "../visa" }
market = { path = "../market" }
