[package]
name = "Ontology"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-cdk = "0.3.0"
ic-cdk-macros = "0.3.0"
url = "2.2.2"
easy-hasher = "2.2.1"
serde = "1.0.111"
libsecp256k1 = "0.6.0"
candid = "0.7.6"
hex = "0.4.3"