[package]
name = "anderson"
version = "0.0.1"
authors = ["Bryan111 <pabsysop@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "andersonex"
path = "src/lib.rs"

[dependencies]
ic-cdk = "0.3.0"
ic-cdk-macros = "0.3.0"
ic-types = "0.2.2"
candid = "0.7.6"
serde = "1.0.116"
serde_cbor = "0.11"
serde_bytes = "0.11"
serde_with = "1.6.2"
serde_json = "1.0.67"
human = { path = "../human" }
visa = { path = "../../boards/visa" }
nft = { path = "../../nft" }
