[package]
name = "nais_canister"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "nais"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-cdk = "0.3.0"
ic-cdk-macros = "0.3.0"
ic-types = "0.2.2"
candid = "0.7.6"
# uuid = { version = "0.8.2", features = ["serde", "v4", "wasm-bindgen"] }
serde = "1.0.116"
serde_cbor = "0.11"
serde_bytes = "0.11"
serde_with = "1.6.2"
easy-hasher = "2.2.1"
nft = { path = "../../nft" }
